@@ -478,7 +478,7 @@ ags_recall_audio_automate(AgsRecall *recall)
 			 &loop_left, &loop_right,
 			 &do_loop);
 
-  return_prev_on_failure = FALSE;
+  return_prev_on_failure = TRUE;
 
   if(do_loop &&
      loop_left <= note_offset){
